--- a/part3/phonebook/package.json
+++ b/part3/phonebook/package.json
@@ -11,8 +11,6 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "morgan": "^1.10.1"
+    "express": "^5.1.0"
   }
 }
