--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -8,7 +8,8 @@
     "test": "NODE_ENV=test node --test",
     "build:ui": "rm -rf dist && cd ../../part2/phonebook && npm run build && cp -r dist ../../part3/phonebook",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "start:test": "NODE_ENV=test node --watch index.js"
   },
   "author": "",
   "license": "ISC",
